--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "velari-property-booking-app-backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
