--- a/.env.store
+++ b/.env.store
@@ -1,3 +1,12 @@
-PORT="5000"
+PORT="8000"
 MONGODB_URI="mongodb+srv://mdenamahmedchowdhury:iJ9micUx04fEPjyu@cluster1.chd7e.mongodb.net"
 CORS_ORIGIN="*"
+ACCESS_TOKEN_SECRET="enam-ahamed-2024"
+ACCESS_TOKEN_EXPIRY="1d"
+REFRESH_TOKEN_SECRET="eanma-ahamed-coder"
+REFRESH_TOKEN_EXPIRY="10d"
+
+
+CLOUDINARY_CLOUD_NAME="dqrbpcob3"
+CLOUDINARY_API_KEY="599718444811246"
+CLOUDINARY_API_SECRET="VUm_A64McNdwvbGsLNPNYyq3Ino"
